--- a/backend/package.json
+++ b/backend/package.json
@@ -11,14 +11,12 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.3",
-    "cloudinary": "^2.8.0",
     "cookie": "^1.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
-    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.15.3",
     "sequelize": "^6.37.7",
     "slugify": "^1.6.6",
@@ -29,6 +27,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
     "nodemon": "^3.1.11",
     "ts-node-dev": "^2.0.0",
